// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prismic Doc 1`] = `
<div>
  <a
    href="/"
  >
    Document link
  </a>
  <a
    href="/other-page"
  >
    Document link
  </a>
  <a
    href="/blog"
  >
    Document link
  </a>
  <a
    href="/blog/hello-world"
  >
    Document link
  </a>
  <a
    href="https://somethingnew.co/share.png"
    rel="noopener noreferrer"
    target="_blank"
  >
    Media link
  </a>
  <a
    href="https://somethingnew.co"
  >
    Web link
  </a>
  <a
    href="https://somethingnew.co"
    rel="noopener noreferrer"
    target="_blank"
  >
    Web link (target blank)
  </a>
</div>
`;

exports[`String 1`] = `
<div>
  <a
    href="/"
  >
    I am a link
  </a>
  <a
    href="/blog"
  >
    I am a link
  </a>
  <a
    href="/test"
  >
    I am a link
  </a>
  <a
    href="/blog/hello-world"
  >
    I am a link
  </a>
  <a
    href="https://somethingnew.co"
    rel="noopener noreferrer"
    target="_blank"
  >
    I am a link
  </a>
</div>
`;
